--- a/src/Home/manual/floor/MysteryChamber.css
+++ b/src/Home/manual/floor/MysteryChamber.css
@@ -1,3 +1,11 @@
+* {
+    -webkit-touch-callout: none;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+}
+
 /* 기본: 선택방지 */
 .chamber-wrap,
 .chamber-wrap * {
