--- a/src/Home/Profile/profileMain.css
+++ b/src/Home/Profile/profileMain.css
@@ -1,9 +1,20 @@
-div {
+* {
     -webkit-touch-callout: none;
     user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     -webkit-user-select: none;
+}
+
+html, body {
+    height: auto;
+    min-height: 100%;
+    overflow-y: auto !important;
+    -webkit-touch-callout: auto !important;
+    user-select: auto !important;
+    -moz-user-select: auto !important;
+    -ms-user-select: auto !important;
+    -webkit-user-select: auto !important;
 }
 
 /* 전체 배경 및 텍스트 스타일 */
